build/log/idf_py_stderr_output_453049
Command: make -j 14 all
In file included from /home/angelalmada/FrameworkBunny/bunny_framework/components/bunny/bunny_sdk.cpp:2:
/home/angelalmada/FrameworkBunny/bunny_framework/components/bunny/config/config.h:46:1: error: expected declaration before '}' token
   46 | }
      | ^
make[2]: *** [esp-idf/bunny/CMakeFiles/__idf_bunny.dir/build.make:76: esp-idf/bunny/CMakeFiles/__idf_bunny.dir/bunny_sdk.cpp.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7313: esp-idf/bunny/CMakeFiles/__idf_bunny.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
